<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".view.activities.AddHabitFormActivity">

    <TextView
    android:textColor="@color/primary_color"
        android:id="@+id/text_habit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/create_a_new_habit"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearlayoutIconWithEditAndDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/text_habit_name">

        <ImageView
            android:id="@+id/imageSelectIconDialog"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10sp"
            android:contentDescription="@string/icon_select"
            android:src="@drawable/baseline_add_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:textColorHint="@color/primary_color"
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:autofillHints="name"
                android:background="@drawable/custom_input"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="10dp"
                app:layout_constraintBottom_toTopOf="@id/edit_description"
                app:layout_constraintTop_toBottomOf="@id/text_habit_name" />

            <EditText
                android:textColorHint="@color/primary_color"
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:autofillHints="name"
                android:background="@drawable/custom_input"
                android:hint="@string/description"
                android:inputType="text"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_name" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearlayoutIconWithEditAndDescription">

        <EditText

            android:textColorHint="@color/primary_color"
            android:id="@+id/edit_reminder_timepick"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:autofillHints="name"
            android:background="@drawable/custom_input"
            android:clickable="false"
            android:drawableStart="@drawable/baseline_access_time_24"
            android:drawablePadding="@dimen/cardview_default_elevation"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/remind_me_at"
            android:inputType="time"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutReminder" />

        <ImageView
            android:id="@+id/imageRemoveReminder"
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:clickable="true"
            android:src="@drawable/baseline_delete_24" />
    </LinearLayout>


    <TextView

        android:id="@+id/text_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/repeat"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutReminder" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/child_group"
        style="@style/Widget.MaterialComponents.ChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_repeat">

        <com.google.android.material.chip.Chip
            android:id="@+id/sun"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sun"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:chipBackgroundColor="@color/secondary_color_alt" />

        <com.google.android.material.chip.Chip
            android:id="@+id/mon"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mon"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:chipBackgroundColor="@color/secondary_color_alt" />

        <com.google.android.material.chip.Chip
            android:id="@+id/tue"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tue"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:chipBackgroundColor="@color/secondary_color_alt" />

        <com.google.android.material.chip.Chip
            android:id="@+id/wed"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wed"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:chipBackgroundColor="@color/secondary_color_alt" />

        <com.google.android.material.chip.Chip
            android:id="@+id/thu"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thu"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:chipBackgroundColor="@color/secondary_color_alt" />

        <com.google.android.material.chip.Chip
            android:id="@+id/fri"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fri"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:chipBackgroundColor="@color/secondary_color_alt" />

        <com.google.android.material.chip.Chip
            android:id="@+id/sat"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sat"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:chipBackgroundColor="@color/secondary_color_alt" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/text_view_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/daily_goal"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/child_group" />

    <com.google.android.material.textfield.TextInputLayout
        android:textColorHint="@color/primary_color"
        android:id="@+id/textInputLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select"
        app:layout_constraintTop_toBottomOf="@id/text_view_goal"
        tools:layout_editor_absoluteX="10dp">

        <AutoCompleteTextView

            android:id="@+id/auto_complete_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:focusable="false"
            android:focusableInTouchMode="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button

        android:id="@+id/button_duration_pick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_the_timer"
        android:backgroundTint="@color/secondary_color_alt"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:textColorHint="@color/primary_color"
        android:id="@+id/text_layout_range_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_end_date"
        app:layout_constraintTop_toBottomOf="@id/button_duration_pick"
        tools:layout_editor_absoluteX="10dp">

        <AutoCompleteTextView

            android:textColorHint="@color/primary_color"
            android:id="@+id/auto_complete_range_date_pick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:focusable="false"
            android:focusableInTouchMode="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:backgroundTint="@color/secondary_color_alt"
        android:textColor="@color/white"
        android:id="@+id/button_create_habit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/create_a_habit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_layout_range_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>