<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".view.fragment.MeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAllCaps="true"
        android:textColor="@color/primary_color"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:backgroundTint="@color/secondary_color_alt"
        android:textColor="@color/primary_color"
        android:id="@+id/button_backup_and_syncronized"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/backup_and_synchronized"
        android:textSize="20sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewUserInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageUserProfile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/image_profile" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/textViewUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton

        android:id="@+id/buttonLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardViewUserInfo"
        android:layout_marginTop="19dp"
        android:backgroundTint="@color/secondary_color_alt"
        android:text="@string/logout"
        android:textAllCaps="true"
        android:textColor="@color/white" />

</RelativeLayout>