<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/checkBoxDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"

        android:gravity="center" />

    <CheckBox
        android:id="@+id/checkBowToggleTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:button="@drawable/baseline_keyboard_arrow_right_24"

        android:visibility="invisible" />

    <!--para testar a barra toggle arrow -->
    <androidx.cardview.widget.CardView

        android:id="@+id/cardView"

        android:layout_width="match_parent"

        android:layout_height="80dp"
        android:layout_margin="2dp"
        android:layout_toEndOf="@id/checkBoxDone"
        android:orientation="vertical"
        android:visibility="visible"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/image_icon"
                android:padding="10dp"
                android:src="@drawable/baseline_add_24" />

            <LinearLayout
                android:id="@+id/linearText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:textColor="@color/primary_color"
                    android:id="@+id/text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/name"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView

                    android:id="@+id/textDuration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/duration"
                    android:textSize="15sp"
                    android:visibility="invisible" />

            </LinearLayout>

            <ImageView
                android:id="@+id/editHabit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/image_icon"
                android:padding="10dp"
                android:src="@drawable/baseline_edit_24" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardBackDuration"

        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:layout_toEndOf="@id/checkBoxDone"
        android:orientation="vertical"
        android:visibility="invisible"

        app:cardBackgroundColor="@color/secondary_color"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/textTimerDuration"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:gravity="center"
                android:text="@string/timeStamp"
                android:textSize="30sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/countDownButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:text="@string/start" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/finalizeTimerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_done"
                android:text="@string/done" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>