<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.HabitDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingBottom="40dp"
            android:text="@string/name"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/delete"
            android:textAllCaps="true"
            app:layout_constraintBottom_toTopOf="@id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/textName">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardStreak"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageScore"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/strike_icon"
                        android:src="@drawable/baseline_score_24" />

                    <TextView
                        android:id="@+id/textViewStrike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imageScore"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="10sp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/current_strike"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewStrikeValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textViewStrike"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="10dp"
                        android:text="@string/zero"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardFinished"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageFinished"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/habit_icon"
                        android:src="@drawable/baseline_done_all_24" />


                    <TextView
                        android:id="@+id/textFinished"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imageFinished"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="10sp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/habit_finished"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewFinished"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textFinished"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="10dp"
                        android:text="@string/zero"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <com.prolificinteractive.materialcalendarview.MaterialCalendarView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/linearLayout"
            app:mcv_showOtherDates="all" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/barChart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:paddingTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/calendarView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>